# multiplayer-tic-tac-toe

./: CMakeLists.txt  README.md
include/: client.h  protocol.h  server.h  utils.h
src/: client.c  protocol.c  server.c  utils.c
